buildscript {
    ext {
        springBootVersion = '2.7.18'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}


group 'com.codido'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

bootJar {
    enabled = false
}

bootJarMainClassName {
    enabled = false
}

jar {
    enabled = true
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.apache.commons:commons-lang3:3.12.0")
    implementation("org.apache.httpcomponents:httpcore:4.4.16")
    implementation("org.apache.httpcomponents:httpclient:4.5.14")
    implementation("org.apache.httpcomponents:httpmime:4.5.14")
    implementation("commons-codec:commons-codec:1.15")
    implementation("commons-io:commons-io:2.11.0")
    runtimeOnly('javax.servlet:javax.servlet-api:4.0.1')

    implementation("com.thoughtworks.xstream:xstream:1.4.20")
    implementation('org.dom4j:dom4j:2.1.4')

    implementation('com.google.code.gson:gson:2.10.1')
    implementation("com.alibaba:fastjson:1.2.83")
    compileOnly "org.projectlombok:lombok:1.18.30"
    implementation("org.slf4j:slf4j-api:1.7.36")
    implementation("ch.qos.logback:logback-classic:1.2.12")

    implementation('com.qiniu:qiniu-java-sdk:7.13.1')
    implementation('net.coobird:thumbnailator:0.4.20')

    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.2'
    implementation('com.github.pagehelper:pagehelper-spring-boot-starter:1.4.7')
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation('org.springframework.boot:spring-boot-starter-data-redis')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'org.bouncycastle:bcprov-jdk18on:1.77'

}

//mybatis generator plugin ------ start
buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "gradle.plugin.com.arenagod.gradle:mybatis-generator-plugin:1.4"
    }
}

apply plugin: "com.arenagod.gradle.MybatisGenerator"

configurations {
    mybatisGenerator
}

mybatisGenerator {
    verbose = true
    configFile = 'src/main/resources/tools/HodorGeneratorConfig.xml'
}
//mybatis generator plugin ------ end
